--- a/main.html
+++ b/main.html
@@ -2,16 +2,7 @@
 <html>
 <head>
 	<title>Colorful Squares</title>
-	<style>
-		.square {
-			width: 50px;
-			height: 50px;
-			display: inline-block;
-			margin: 10px;
-			background-color: #E6E6FA; /*lavender */
-			cursor: pointer;
-		}
-	</style>
+	<link rel = "stylesheet" href ="style.css">
 </head>
 <body>
 	<div class="square" id="square1" ></div>
