--- a/main.html
+++ b/main.html
@@ -5,11 +5,12 @@
 	<link rel = "stylesheet" href ="style.css">
 </head>
 <body>
-	<div class="square" id="square1" ></div>
-	<div class="square" id="square2" ></div>
-	<div class="square" id="square3" ></div>
-
-	<script type="text/javascript" src="./script.js">
-	</script>
+  <div class="container">
+    <div class="square" id="square1"></div>
+    <div class="square" id="square2"></div>
+    <div class="square" id="square3"></div>
+  </div>
+  <script type="text/javascript" src="./script.js">
+  </script>
 </body>
 </html>
